# maxvolpy

./: .gitignore  MANIFEST.in  pyproject.toml  setup.py
src/maxvolpy/: __init__.py  __init__.pyi  _maxvol.pyx  cross.py  maxvol.py  misc.py
tests/: conftest.py  test_maxvol.py
